--- a/src/frontend.kv
+++ b/src/frontend.kv
@@ -1,11 +1,20 @@
 <FirstScreen>:
     GridLayout:
-        cols: 3
+        cols: 1
+        padding: 20
+        spacing: 10
+
         Image:
-            source:
+            id: img
+            size_hint_y: 0.8
+        
         TextInput:
+            size_hint_y: 0.1
+        
         Button:
             text: "Share Image"
+            size_hint_y: 0.1
+            on_press: root.search_image()
 
 <RootWidget>:
     FirstScreen:
