Added the image to the image screen.

--- a/ui/frontend.kv
+++ b/ui/frontend.kv
@@ -45,7 +45,8 @@
         cols: 1
         
         Image:
-            id: current_picture
+            id: current_image
+            size_hint_y: 0.60
 
         GridLayout:
             cols: 2
