Added pivture to image screen.

--- a/ui/frontend.kv
+++ b/ui/frontend.kv
@@ -54,6 +54,7 @@
             Button:
                 id: create_link_button
                 text: "Create Link"
+                on_press: root.creat_link()
 
             Button:
                 id: reset_button
